[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.5.2",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "requests>=2.32.4",
    "schedule>=1.2.2",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "deezer-python>=7.1.1",
    "deezer-py>=1.3.7",
    "flask-sqlalchemy>=3.1.1",
    "werkzeug>=3.1.3",
    "spotipy>=2.25.1",
    "sqlalchemy>=2.0.42",
    "psycopg2-binary>=2.9.10",
]
